<?xml version="1.0" encoding="utf-8"?>


    <androidx.cardview.widget.CardView
        android:id="@+id/card"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        app:cardBackgroundColor="@color/colorPrimaryVariant"

        app:cardElevation="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/linear_background"

            android:padding="5dp">

            <androidx.cardview.widget.CardView
                android:id="@+id/from_card"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                app:cardBackgroundColor="@color/colorPrimaryVariant"
                app:cardCornerRadius="20dp"
                app:cardElevation="20dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView3">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/linear_background2"

                    android:padding="5dp">

                    <TextView
                        android:id="@+id/from_time"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:text="@string/select_time"
                        android:textColor="@color/white"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/from_date"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"

                        android:layout_marginStart="10dp"
                        android:layout_marginTop="15dp"
                        android:layout_marginEnd="10dp"
                        android:layout_marginBottom="5dp"
                        android:textColor="@color/white"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/from_time" />


                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_margin="10dp"
                android:text="@string/from"
                android:textColor="@color/white"
                android:textSize="30sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@+id/from_card"
                app:layout_constraintStart_toStartOf="@+id/from_card"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_marginTop="20dp"
                android:text="@string/to"
                android:textColor="@color/white"
                android:textSize="30sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@+id/to_card"
                app:layout_constraintStart_toStartOf="@+id/to_card"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.cardview.widget.CardView
                android:id="@+id/to_card"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                app:cardBackgroundColor="@color/colorPrimaryVariant"
                app:cardCornerRadius="20dp"
                app:cardElevation="20dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView2">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/linear_background2"

                    android:padding="5dp">

                    <TextView
                        android:id="@+id/to_time"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:text="@string/select_time"
                        android:textColor="@color/white"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/to_date"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"

                        android:layout_marginStart="10dp"
                        android:layout_marginTop="15dp"
                        android:layout_marginEnd="10dp"
                        android:layout_marginBottom="5dp"
                        android:text=" "
                        android:textColor="@color/white"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/to_time" />


                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.cardview.widget.CardView>

            <Button
                android:id="@+id/save_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/save"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/to_card"
                app:layout_constraintStart_toStartOf="@+id/from_card"
                app:layout_constraintTop_toBottomOf="@+id/from_card" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>


